--- a/static/CSS/index.css
+++ b/static/CSS/index.css
@@ -1,3 +1,7 @@
+body {
+  background-color: rgb(2, 0, 36);
+}
+
 .header  {
   background-image: url("https://wallpaperaccess.com/full/26174.png");
     color: honeydew;
@@ -25,10 +29,7 @@
 
 
 .demo a {
-  position: absolute;
-  bottom: 20px;
-  
-  z-index: 2;
+  margin-top: 12%;
   display: inline-block;
   -webkit-transform: translate(0, -50%);
   transform: translate(0, -50%);
@@ -47,7 +48,6 @@
 }
 #section04 a span {
     text-align: center;
-  position: absolute;
   margin: auto;
   width: 23%;
   height: 24px;
@@ -85,12 +85,12 @@
 
 .info {
     color: honeydew;
-    width: 100%;
-    height: 50%;
+    width: 90%;
+    padding-bottom: 10%;
     font-size: 20px;
     padding-top: 10%;
     margin: auto;
     text-align: center;
-    background-color: rgb(0, 8, 29);
+    background-color: rgba(0, 8, 29, 0);
 }
 
