--- a/static/CSS/tasks.css
+++ b/static/CSS/tasks.css
@@ -69,16 +69,18 @@ body {
     box-shadow: -1px 2px 39px -11px var(--secondary-color);
   border-radius: 10px;
   padding: 50px;
-  margin-top: -50%;
+  margin-top: 10%;
   left: 73%;
   position: fixed;
 }
 
 .theme-switch-wrapper {
+    padding: 1%;
     color: var(--bg-color);
     background-color: var(--font-color);
     display: flex;
     align-items: center;
+    overflow:hidden
   
   }
   .theme-switch {
@@ -130,3 +132,50 @@ body {
   .slider.round:before {
     border-radius: 50%;
   }
+
+  @media only screen and (max-width : 1200px) {
+  
+  }
+  
+  @media only screen and (max-width : 992px ) {
+    .tasks p {
+      width: 70%;
+  }
+
+
+  
+  
+  
+  @media only screen and (max-width : 768px) {
+      
+  .tasks p {
+    width: 60%;
+  }
+
+  .tasks {
+    width: 83%;
+  }
+
+  .filter {
+    overflow:hidden; 
+    position:absolute;
+    margin-top: 1%;
+    left: 19%;
+    width: 60%;
+    height: 240px;
+    background-color: var(--bg-color);
+  }
+
+  .row {
+    width: 100%;
+    margin-top: 45%;
+  }
+
+  }
+  
+  @media only screen and (max-width: 576px) {
+      
+     
+  }
+  
+  
