--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,16 +14,16 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Online Test</a>
+                <a class="nav-link" href="./onlinetest.html">Online Test</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="#">Leaderboard</a>
+                <a class="nav-link disabled" href="./leaderboard.html">Leaderboard</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
+                <a class="nav-link" href="./contact.html">Contact Us</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="./about.html">About</a>
             </li>
         </ul>
         {% if page.change_theme %}
