--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,16 +13,16 @@
                     Tasks
                 </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="./onlinetest.html">Online Test</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link disabled" href="./leaderboard.html">Leaderboard</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="./contact.html">Contact Us</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="./about.html">About</a>
             </li>
         </ul>
