--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,8 @@
 
     {{ content }}
 
+    {% include footer.html %}
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" crossorigin="anonymous">
     </script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
