--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,183 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+<style>
+    :root {
+  --primary-color: rgb(226, 226, 226);
+  --secondary-color: #818cab;
+  --font-color: #ffffff;
+  --bg-color: #00000f;
+  --heading-color: #000a2b9a;
+}
+
+[data-theme="dark"] {
+  --primary-color: rgb(32, 32, 32);
+  --secondary-color: #2c2c2c;
+  --font-color: #202020;
+  --bg-color: rgb(226, 226, 226);
+  --heading-color: #dddddd;
+}
+
+.logo {
+  height: 100px;
+}
+
+#dark-light {
+  color: white;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+  background-color: rgb(52, 58, 64)!important;
+  text-align: center;
+}
+
+nav ul li a {
+  color: var(--bg-color);
+  text-decoration: none;
+  padding: .8rem 1rem;
+  display: block;
+  line-height: 1;
+}
+
+nav ul li {
+  
+  border-bottom: 1px dotted #ddd;
+}
+
+nav div:first-child {
+  background: var(--primary-color);;
+}
+
+nav div:first-child h1 {
+  line-height: 0;
+  padding: .8rem 0rem;
+  text-align: center;
+}
+
+nav div:first-child h1,
+nav ul {
+  margin: 0;
+}
+
+@media only screen and (min-width:30em) {
+  nav {
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--primary-color);
+    align-items: center;
+  }
+
+  nav ul {
+    display: flex;
+    align-items: center;
+    background: none;
+    flex-wrap: wrap;
+  }
+
+  nav div:first-child h1 {
+    padding: 0;
+    margin-left: 1rem;
+  }
+
+  nav div:first-child img {
+    height: 120px;
+  }
+
+  nav ul li {
+    border-bottom: none;
+    flex: 1 0 auto;
+    position: relative;
+  }
+
+
+  nav ul li a {
+    padding: 1.2rem 1rem
+  }
+
+  nav ul li a::before,
+  nav ul li a::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 0%;
+    height: 2px;
+    background: cyan;
+    transition: .2s width ease-in-out;
+  }
+
+  nav ul li a::before {
+    left: 0;
+  }
+
+  nav ul li a:hover::after,
+  nav ul li a:hover::before {
+    width: 50%;
+  }
+}
+
+.theme-switch-wrapper {
+  padding: 1%;
+  /* background-color: var(--font-color); */
+  display: flex;
+  align-items: center;
+  overflow: hidden
+}
+
+.theme-switch {
+  display: inline-block;
+  height: 34px;
+  position: relative;
+  width: 60px;
+  margin: 10px;
+}
+
+.theme-switch input {
+  display: none;
+}
+
+.slider {
+  color: var(--font-color);
+  background-color: rgba(0, 0, 0, 0.4);
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: .4s;
+}
+
+.slider:before {
+  background-color: var(--bg-color);
+  bottom: 4px;
+  content: "";
+  height: 26px;
+  left: 4px;
+  position: absolute;
+  transition: .4s;
+  width: 26px;
+}
+
+input:checked+.slider {
+  background-color: rgba(255, 255, 255, 0.4);
+}
+
+input:checked+.slider:before {
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+</style>
+
     <a class="navbar-brand" href="./index.html"><img src="./static/images/BITS-logo-w.gif" alt="BITS"
             class="logo" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
