--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,22 +33,22 @@
   
           <ul class="list-unstyled">
             <li>
-              <a href="../index.html">Home</a>
+              <a href="https://chamindujs.github.io/bitsui/index.html">Home</a>
             </li>
             <li>
-              <a href="../tasks.html">Tasks</a>
+              <a href="">Tasks</a>
             </li>
             <li>
-         <a href="../onlinetest.html">Online Test</a>
+         <a href="">Online Test</a>
             </li>
             <li>
-              <a href="../leaderboard.html">leaderBoard</a>
+              <a href="">leaderBoard</a>
             </li>
             <li>
-                <a href="../about.html">About</a>
+                <a href="https://chamindujs.github.io/bitsui/about.html">About</a>
             </li>
             <li>
-                <a href="../contact.html">Contact</a>
+                <a href="https://chamindujs.github.io/bitsui/contact.html">Contact</a>
             </li>
           </ul>
   
@@ -65,7 +65,7 @@
   
           <ul class="list-unstyled">
             <li>
-              <a href="#!">Bits 2018 Recap</a>
+              <a href="https://acicts.github.io/BITS-18-Recap/">Bits 2018 Recap</a>
             </li>
             
           </ul>
@@ -90,42 +90,12 @@
         <h5 class="mb-1" style="color: rgb(255, 255, 255);">Get Involved !</h5>
       </li>
       <li class="list-inline-item">
-        <a href="#!" class="btn btn-danger btn-rounded">Register</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfyiQFQWdhvyFRMa-D1eAhWVCC6w_z0ycWBBOnq7MgBxDXsGw/viewform?fbzx=-310011898092864180" class="btn btn-danger btn-rounded" target="_blank">Register</a>
       </li>
     </ul>
     <!-- Call to action -->
   
     <hr>
-  
-    <!-- Social buttons 
-    <ul class="list-unstyled list-inline text-center">
-      <li class="list-inline-item">
-        <a class="btn-floating btn-fb mx-1">
-          <i class="fab fa-facebook-f"> </i>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a class="btn-floating btn-tw mx-1">
-          <i class="fab fa-twitter"> </i>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a class="btn-floating btn-gplus mx-1">
-          <i class="fab fa-google-plus-g"> </i>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a class="btn-floating btn-li mx-1">
-          <i class="fab fa-linkedin-in"> </i>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a class="btn-floating btn-dribbble mx-1">
-          <i class="fab fa-dribbble"> </i>
-        </a>
-      </li>
-    </ul>
-     Social buttons -->
   
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
