--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -187,13 +187,13 @@ input:checked+.slider:before {
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="./tasks.html">
+            <li class="nav-item">
+                <a class="nav-link disabled" href="./tasks.html">
                     Tasks
                 </a>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="./onlinetest.html">Online Test</a>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="./onlinetest.html">Online Test</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link disabled" href="./leaderboard.html">Leaderboard</a>
