--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="{{ page.css }}" />
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
         rel="stylesheet" />
+
+    <link rel="icon" type="icon/png" href="../static/images/favicon.png"/>
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
