--- a/static/CSS/tasks.css
+++ b/static/CSS/tasks.css
@@ -8,6 +8,7 @@ body {
 }
 
 
+
 #row1 {
   display: flex;
 }
@@ -53,7 +54,8 @@ body {
   color: var(--font-color);
 }
 
-.filter {
+.filterDiv {
+  background-color: var(--heading-color);
   color: var(--font-color);
   float: right;
   width: 20%;
@@ -62,7 +64,7 @@ body {
   box-shadow: -1px 2px 5px var(--secondary-color);
   border-radius: 10px;
   padding: 50px;
-  margin-top: 5%;
+  margin-top: 3%;
   left: 73%;
   position: fixed;
 }
@@ -90,7 +92,7 @@ body {
     width: 83%;
   }
 
-  .filter {
+  .filterDiv {
     overflow: hidden;
     position: absolute;
     margin-top: 1%;
@@ -130,7 +132,7 @@ body {
     margin-left: auto;
   }
 
-  .filter {
+  .filterDiv {
     margin-left: -14.5%;
     width: 90%;
   }
