--- a/static/CSS/index.css
+++ b/static/CSS/index.css
@@ -15,7 +15,7 @@ body {
 }
 
 .main {
-  background-image: url("https://c4.wallpaperflare.com/wallpaper/351/469/119/5bd00e379be84-wallpaper-preview.jpg");
+  background-image: url("static/images/BITS Cover.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   font-family: 'Lato', sans-serif;
