--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -65,13 +65,13 @@
   
           <ul class="list-unstyled">
             <li>
-              <a href="https://acicts.github.io/bits-official/">BITS 2018 Archived Website</a>
+              <a href="https://acicts.github.io/bits-official/">BITS 2018 Archived Site</a>
             </li>
             <li>
-              <a href="https://acicts.github.io/BITS-18-Recap/">BITS 2018 Recap Website</a>
+              <a href="https://acicts.github.io/BITS-18-Recap/">BITS 2018 Recap Site</a>
             </li>
             <li>
-              <a href="https://acicts.github.io/BITS19/">BITS 2019 Archived Website"</a>
+              <a href="https://acicts.github.io/BITS19/">BITS 2019 Archived Site</a>
             </li>
             
           </ul>
