--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,22 +33,22 @@
   
           <ul class="list-unstyled">
             <li>
-              <a href="https://chamindujs.github.io/bitsui/index.html">Home</a>
+              <a href="https://acicts.github.io/BITS20/index.html">Home</a>
             </li>
             <li>
-              <a href="">Tasks</a>
+              <a href="https://acicts.github.io/BITS20/index.html">Tasks</a>
             </li>
             <li>
-         <a href="">Online Test</a>
+         <a href="https://acicts.github.io/BITS20/onlinetest.html">Online Test</a>
             </li>
             <li>
               <a href="">Leaderoard</a>
             </li>
             <li>
-                <a href="https://chamindujs.github.io/bitsui/about.html">About</a>
+                <a href="acicts.github.io/BITS20/about.html">About</a>
             </li>
             <li>
-                <a href="https://chamindujs.github.io/bitsui/contact.html">Contact</a>
+                <a href="acicts.github.io/BITS20/contact.html">Contact</a>
             </li>
           </ul>
   
