--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -131,14 +131,14 @@ nav ul {
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="./index.html">
+                <a class="nav-link active" href="./index.html">
                     Tasks
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./onlinetest.html">Online Test</a>
+                <a class="nav-link active" href="./onlinetest.html">Online Test</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="./leaderboard.html">Leaderboard</a>
             </li>
             <li class="nav-item active">
